--- a/package.json
+++ b/package.json
@@ -2,12 +2,6 @@
   "name": "boardgames",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.4.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
@@ -28,7 +22,13 @@
     ]
   },
   "devDependencies": {
-    "tachyons": "4.11.1",
-    "serialize-javascript": "2.1.1"
+    "serialize-javascript": "^5.0.1",
+    "tachyons": "^4.12.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.2"
   }
 }
